# emotion2vec

./: pyproject.toml
emo2vec_versa/: emo2vec_class.py
emo2vec_versa/upstream/models/: base.py  config.py
