[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emo2vec_versa"
description = "VERSA adapter for emotion2vec"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Jiatong (adapted from https://github.com/ddlBoJack/emotion2vec" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "torch",
    "fairseq",
    "timm",
]
requires-python = ">=3.9"
dynamic = ["version"]

[project.optional-dependencies]
check = ["ruff", "mypy", "types-setuptools", "types-tqdm"]
train = ["scikit-learn>=1.3.2", "wandb>=0.17.0", "python-dotenv>=1.0.1"]
optional = ["pandas>=2.2.2"]

[tool.setuptools.dynamic]
version = { attr = "emo2vec_versa.__version__" }

[tool.setuptools.packages.find]
include = ["emo2vec_versa*"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["^build/"]
